--- a/cookie1.html
+++ b/cookie1.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Chocolate Chip Cookie</h1>
     <div class="details">
+        <img src="assets/cookie1.png" alt="Chocolate Chip Cookie">
         <p><strong>Calories:</strong> 200</p>
         <p><strong>Ingredients:</strong> Flour, Sugar, Butter, Chocolate Chips</p>
         <p><strong>Description:</strong> A classic cookie with rich chocolate chips.</p>
