--- a/cookie2.html
+++ b/cookie2.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Oatmeal Raisin Cookie</h1>
     <div class="details">
+        <img src="assets/cookie2.png" alt="Oatmeal Raisin Cookie">
         <p><strong>Calories:</strong> 180</p>
         <p><strong>Ingredients:</strong> Oats, Raisins, Flour, Sugar, Butter</p>
         <p><strong>Description:</strong> A healthy cookie with oats and raisins.</p>
