--- a/cookie3.html
+++ b/cookie3.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Peanut Butter Cookie</h1>
     <div class="details">
+        <img src="assets/cookie3.png" alt="Peanut Butter Cookie">
         <p><strong>Calories:</strong> 190</p>
         <p><strong>Ingredients:</strong> Peanut Butter, Flour, Sugar, Butter</p>
         <p><strong>Description:</strong> A delicious cookie with rich peanut butter.</p>
