--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <h1>Choose a Cookie</h1>
     <div class="cookie" onclick="window.location.href='cookie1.html'">
         <h2>Chocolate Chip</h2>
+        <img src="assets/cookie1.png" alt="Chocolate Chip Cookie">
         <p>Click for details</p>
     </div>
     <div class="cookie" onclick="window.location.href='cookie2.html'">
         <h2>Oatmeal Raisin</h2>
+        <img src="assets/cookie2.png" alt="Oatmeal Raisin Cookie">
         <p>Click for details</p>
     </div>
     <div class="cookie" onclick="window.location.href='cookie3.html'">
         <h2>Peanut Butter</h2>
+        <img src="assets/cookie3.png" alt="Peanut Butter Cookie">
         <p>Click for details</p>
     </div>
 </body>
