--- a/cookie1.html
+++ b/cookie1.html
@@ -10,9 +10,66 @@
     <h1>Chocolate Chip Cookie</h1>
     <div class="details">
         <img src="assets/cookie1.png" alt="Chocolate Chip Cookie">
-        <p><strong>Calories:</strong> 200</p>
-        <p><strong>Ingredients:</strong> Flour, Sugar, Butter, Chocolate Chips</p>
-        <p><strong>Description:</strong> A classic cookie with rich chocolate chips.</p>
+        <p><strong>Ingredients:</strong> brown sugar, white sugar, wheat, butter, salt, corn starch, baking soda, vanilla extract, egg, dark chocolate chips</p>
+        <h3>Nutrition Facts (per 80g serving)</h3>
+        <table class="nutrition-facts">
+            <tr>
+                <th>Nutrient</th>
+                <th>Amount</th>
+            </tr>
+            <tr>
+                <td>Calories</td>
+                <td>366</td>
+            </tr>
+            <tr>
+                <td>Sugar</td>
+                <td>27.1 g</td>
+            </tr>
+            <tr>
+                <td>Carbohydrates</td>
+                <td>50 g</td>
+            </tr>
+            <tr>
+                <td>Fat</td>
+                <td>17.1</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>5.1g</td>
+            </tr>
+            <tr>
+                <td>Fiber</td>
+                <td>4 g</td>
+            </tr>
+            <tr>
+                <td>Sodium</td>
+                <td>321.5 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin D</td>
+                <td>6.7 %</td>
+            </tr>
+            <tr>
+                <td>Calcium</td>
+                <td>3.2 %</td>
+            </tr>
+            <tr>
+                <td>Iron</td>
+                <td>12.8 %</td>
+            </tr>
+            <tr>
+                <td>Potassium</td>
+                <td>204.4 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin A</td>
+                <td>0.3 %</td>
+            </tr>
+            <tr>
+                <td>Vitamin C</td>
+                <td>0 %</td>
+            </tr>
+        </table>
         <button onclick="window.history.back()">Go Back</button>
     </div>
 </body>
