--- a/cookie1.html
+++ b/cookie1.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Chip Cookie Details</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Chocolate Chip Cookie</h1>
-    <p>  </p>
+    <p> </p>
     <div class="details">
         <img src="assets/cookie1.png" alt="Chocolate Chip Cookie">
-        <p><strong>Ingredients:</strong> brown sugar, white sugar, wheat, butter, salt, corn starch, baking soda, vanilla extract, egg, dark chocolate chips</p>
-        <h3>Nutrition Facts (per 80g serving)</h3>
+        <p><strong>Ingredients:</strong> brown sugar, white sugar, wheat, butter, salt, corn starch, baking soda,
+            vanilla extract, eggs, dark chocolate chips</p>
+        <h3>Nutrition Facts Per 1 serving “80gm”</h3>
+
         <table class="nutrition-facts">
             <tr>
                 <th>Nutrient</th>
@@ -32,11 +36,11 @@
             </tr>
             <tr>
                 <td>Fat</td>
-                <td>17.1</td>
+                <td>17.1 g</td>
             </tr>
             <tr>
                 <td>Protein</td>
-                <td>5.1g</td>
+                <td>5.1 g</td>
             </tr>
             <tr>
                 <td>Fiber</td>
@@ -74,4 +78,5 @@
         <button onclick="window.history.back()">Go Back</button>
     </div>
 </body>
+
 </html>
