--- a/cookie2.html
+++ b/cookie2.html
@@ -1,19 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oatmeal Raisin Cookie Details</title>
+    <title>Double Rich Chocolate</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Oatmeal Raisin Cookie</h1>
+    <h1>Double Rich Chocolate</h1>
+    <p> </p>
     <div class="details">
-        <img src="assets/cookie2.png" alt="Oatmeal Raisin Cookie">
-        <p><strong>Calories:</strong> 180</p>
-        <p><strong>Ingredients:</strong> Oats, Raisins, Flour, Sugar, Butter</p>
-        <p><strong>Description:</strong> A healthy cookie with oats and raisins.</p>
+        <img src="assets/cookie2.png" alt="Double rich chocolate">
+        <p><strong>Ingredients:</strong> brown sugar , white sugar , wheat , butter , salt, corn starch , baking soda ,
+            vanilla extract , eggs , dark chocolate chips , cacao , milk</p>
+        <h3>Nutrition Facts Per 1 serving “80gm”</h3>
+        <table class="nutrition-facts">
+            <tr>
+                <th>Nutrient</th>
+                <th>Amount</th>
+            </tr>
+            <tr>
+                <td>Calories</td>
+                <td>368</td>
+            </tr>
+            <tr>
+                <td>Sugar</td>
+                <td>27.7 g</td>
+            </tr>
+            <tr>
+                <td>Carbohydrates</td>
+                <td>49.8 g</td>
+            </tr>
+            <tr>
+                <td>Fat</td>
+                <td>5.2 g</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>5.2 g</td>
+            </tr>
+            <tr>
+                <td>Fiber</td>
+                <td>2.1 g</td>
+            </tr>
+            <tr>
+                <td>Sodium</td>
+                <td>216.1 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin D</td>
+                <td>1.6 %</td>
+            </tr>
+            <tr>
+                <td>Calcium</td>
+                <td>2.5 %</td>
+            </tr>
+            <tr>
+                <td>Iron</td>
+                <td>9.9 %</td>
+            </tr>
+            <tr>
+                <td>Potassium</td>
+                <td>156.5 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin A</td>
+                <td>0.1 %</td>
+            </tr>
+            <tr>
+                <td>Vitamin C</td>
+                <td>0 %</td>
+            </tr>
+        </table>
         <button onclick="window.history.back()">Go Back</button>
     </div>
 </body>
+
 </html>
