--- a/cookie3.html
+++ b/cookie3.html
@@ -1,19 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peanut Butter Cookie Details</title>
+    <title>Red Velvet Cookie Details</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Peanut Butter Cookie</h1>
+    <h1>Red Velvet Cookie</h1>
+    <p> </p>
     <div class="details">
-        <img src="assets/cookie3.png" alt="Peanut Butter Cookie">
-        <p><strong>Calories:</strong> 190</p>
-        <p><strong>Ingredients:</strong> Peanut Butter, Flour, Sugar, Butter</p>
-        <p><strong>Description:</strong> A delicious cookie with rich peanut butter.</p>
+        <img src="assets/cookie3.png" alt="Red Velvet Cookie">
+        <p><strong>Ingredients:</strong> brown sugar , white sugar , wheat , butter , salt, corn starch , baking soda ,
+            vanilla extract , eggs, white chocolate chips, milk , food coloring</p>
+        <h3>Nutrition Facts Per 1 serving “80gm”</h3>
+        <table class="nutrition-facts">
+            <tr>
+                <th>Nutrient</th>
+                <th>Amount</th>
+            </tr>
+            <tr>
+                <td>Calories</td>
+                <td>356</td>
+            </tr>
+            <tr>
+                <td>Sugar</td>
+                <td>29.2 g</td>
+            </tr>
+            <tr>
+                <td>Carbohydrates</td>
+                <td>50.7 g</td>
+            </tr>
+            <tr>
+                <td>Fat</td>
+                <td>5.9 g</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>4.3 g</td>
+            </tr>
+            <tr>
+                <td>Fiber</td>
+                <td>0.8 g</td>
+            </tr>
+            <tr>
+                <td>Sodium</td>
+                <td>180.8 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin D</td>
+                <td>1 %</td>
+            </tr>
+            <tr>
+                <td>Calcium</td>
+                <td>5.2 %</td>
+            </tr>
+            <tr>
+                <td>Iron</td>
+                <td>8.2 %</td>
+            </tr>
+            <tr>
+                <td>Potassium</td>
+                <td>103.6 mg</td>
+            </tr>
+            <tr>
+                <td>Vitamin A</td>
+                <td>0.3 %</td>
+            </tr>
+            <tr>
+                <td>Vitamin C</td>
+                <td>0.1 %</td>
+            </tr>
+        </table>
         <button onclick="window.history.back()">Go Back</button>
     </div>
 </body>
+
 </html>
