--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Selection</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Choose a Cookie</h1>
     <div class="cookie" onclick="window.location.href='cookie1.html'">
@@ -14,14 +16,15 @@
         <p>Click for details</p>
     </div>
     <div class="cookie" onclick="window.location.href='cookie2.html'">
-        <h2>Oatmeal Raisin</h2>
-        <img src="assets/cookie2.png" alt="Oatmeal Raisin Cookie">
+        <h2>Double Rich Chocolate</h2>
+        <img src="assets/cookie2.png" alt="Double Rich Chocolate Cookie">
         <p>Click for details</p>
     </div>
     <div class="cookie" onclick="window.location.href='cookie3.html'">
-        <h2>Peanut Butter</h2>
-        <img src="assets/cookie3.png" alt="Peanut Butter Cookie">
+        <h2>Red Velvet Cookie</h2>
+        <img src="assets/cookie3.png" alt="Red Velvet">
         <p>Click for details</p>
     </div>
 </body>
+
 </html>
